--- a/pages/list.html
+++ b/pages/list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>main</title>
+    <title>list</title>
   </head>
   <style>
     #container {
@@ -14,6 +14,17 @@
       text-align: center;
       min-height: 80vh;
       background: rgb(212, 211, 211);
+    }
+
+    #whiteBox {
+      position: relative;
+      width: 80%;
+      height: 90vh;
+      top: 80px;
+      background: #ffffff;
+      box-shadow: 0px 0px 4px 2px rgba(100, 100, 100, 0.25);
+      border-radius: 5px;
+      margin: auto;
     }
 
     #date {
@@ -27,54 +38,26 @@
       text-shadow: 3px 3px 7px gray;
     }
 
-    .whiteBox {
-      position: relative;
-      display: inline-block;
-      width: 30%;
-      height: 60vh;
-      top: 50px;
-      background: #ffffff;
-      border-radius: 20px;
-      box-shadow: 0px 0px 4px 1px rgba(100, 100, 100, 0.25);
-      margin-top: 20px;
-      margin-right: 45px;
-    }
-
     .title {
       position: relative;
       font-family: Pretendard;
-      font-weight: 800;
-      font-size: 25px;
+      font-weight: 780;
+      font-size: 30px;
       text-align: center;
-
-      top: 4.5%;
-
+      top: 80px;
+      left: -20%;
       color: #4c7343;
     }
 
     .line {
       position: relative;
-      top: 5%;
-    }
-
-    .text {
-      position: relative;
-      font-family: Pretendard;
-      font-size: 18px;
-      font-weight: 500;
-      line-height: 24px;
-      text-align: center;
-
-      margin-top: 15%;
-      padding-left: 32px;
-      width: 300px;
+      top: 75px;
     }
 
     #rec {
       position: relative;
 
       border-radius: 10px;
-      top: 250px;
     }
   </style>
   <body>
@@ -89,17 +72,17 @@
           style="position: relative; left: 13%; margin-top: 1.5%"
         />
         <img
-          src="../images/tile - o.png"
-          style="position: relative; top: -8.3px; left: -22.5%"
+          src="../images/tile - x.png"
+          style="position: relative; top: -25px; left: -12.5%"
+          onclick="gotoTile()"
         />
         <img
-          src="../images/list - x.png"
-          style="position: relative; top: -25px; left: -18%"
-          onclick="gotoList()"
+          src="../images/list - o.png"
+          style="position: relative; top: -12px; left: -8.5%"
           ;
         />
       </div>
-      <div id="whiteBoxArea"></div>
+      <div id="whiteBox"></div>
       <div id="rec">
         <img src="../images/Rectangle 8.png" style="width: 100%" ; />
         <img
@@ -122,7 +105,6 @@
             left: 220px;
             margin-right: 80px;
           "
-          onclick="writebtn()"
         />
         <img
           id="btn"
@@ -150,6 +132,6 @@
         />
       </div>
     </div>
-    <script src="../js/main.js"></script>
+    <script src="../js/list.js"></script>
   </body>
 </html>
