--- a/pages/write.html
+++ b/pages/write.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>0</title>
+    <title>write</title>
   </head>
   <style>
     #container {
@@ -53,7 +53,8 @@
       letter-spacing: 0.01em;
       text-align: center;
 
-      width: 400px;
+      width: 600px;
+      height: 150px;
       top: 10%;
     }
 
@@ -74,10 +75,14 @@
         <div id="line">
           <img src="../images/Line 1.png" style="width: 50%" ; />
         </div>
-        <div id="img">
-          <img src="../images/Rectangle 21.png" style="position:relative; width:50%; top: 50px;"/>
-        </div>
-        <input type="text" id="text" placeholder="오늘 무슨 일이 있었냐면 ..."/>
+        <img
+          src="../images/Rectangle 21.png"
+          style="position: relative; width: 50%; top: 50px"
+        />
+        <textarea
+          id="text"
+          placeholder="오늘 무슨 일이 있었냐면 ..."
+        ></textarea>
       </div>
       <div id="rec">
         <img src="../images/Rectangle 8.png" style="width: 100%" ; />
@@ -91,21 +96,18 @@
             left: 130px;
             margin-right: 80px;
           "
+          onclick="savebtn()"
         />
         <img
           id="btn"
           src="../images/save.png"
-          style="position: relative; width: 7%;
-          bottom: 580px;
-          right: 75px;"
+          style="position: relative; width: 7%; bottom: 580px; right: 75px"
+          onclick="savebtn()"
         />
         <img
           src="../images/pic.png"
-          style="position: relative; width: 9%;
-          bottom: 190px;
-          right: 58%;"
+          style="position: relative; width: 9%; bottom: 190px; right: 58%"
         />
-      </div>
       </div>
     </div>
     <script src="../js/write.js"></script>
